; ModuleID = '/home/carl/AnghaBench/disque/deps/jemalloc/src/extr_chunk.c_chunk_alloc_default.c'
source_filename = "/home/carl/AnghaBench/disque/deps/jemalloc/src/extr_chunk.c_chunk_alloc_default.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@config_valgrind = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i64, i64, i32*, i32*, i32)* @chunk_alloc_default to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @chunk_alloc_default(i8* %0, i64 %1, i64 %2, i32* %3, i32* %4, i32 %5) #0 {
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i8*, align 8
  %15 = alloca %struct.TYPE_4__*, align 8
  store i8* %0, i8** %8, align 8
  store i64 %1, i64* %9, align 8
  store i64 %2, i64* %10, align 8
  store i32* %3, i32** %11, align 8
  store i32* %4, i32** %12, align 8
  store i32 %5, i32* %13, align 4
  %16 = load i32, i32* %13, align 4
  %17 = call %struct.TYPE_4__* @chunk_arena_get(i32 %16)
  store %struct.TYPE_4__* %17, %struct.TYPE_4__** %15, align 8
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** %15, align 8
  %19 = load i8*, i8** %8, align 8
  %20 = load i64, i64* %9, align 8
  %21 = load i64, i64* %10, align 8
  %22 = load i32*, i32** %11, align 8
  %23 = load i32*, i32** %12, align 8
  %24 = load %struct.TYPE_4__*, %struct.TYPE_4__** %15, align 8
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i8* @chunk_alloc_core(%struct.TYPE_4__* %18, i8* %19, i64 %20, i64 %21, i32* %22, i32* %23, i32 %26)
  store i8* %27, i8** %14, align 8
  %28 = load i8*, i8** %14, align 8
  %29 = icmp eq i8* %28, null
  br i1 %29, label %30, label %31

30:                                               ; preds = %6
  store i8* null, i8** %7, align 8
  br label %40

31:                                               ; preds = %6
  %32 = load i64, i64* @config_valgrind, align 8
  %33 = icmp ne i64 %32, 0
  br i1 %33, label %34, label %38

34:                                               ; preds = %31
  %35 = load i8*, i8** %14, align 8
  %36 = load i64, i64* %9, align 8
  %37 = call i32 @JEMALLOC_VALGRIND_MAKE_MEM_UNDEFINED(i8* %35, i64 %36)
  br label %38

38:                                               ; preds = %34, %31
  %39 = load i8*, i8** %14, align 8
  store i8* %39, i8** %7, align 8
  br label %40

40:                                               ; preds = %38, %30
  %41 = load i8*, i8** %7, align 8
  ret i8* %41
}

declare dso_local %struct.TYPE_4__* @chunk_arena_get(i32) #1

declare dso_local i8* @chunk_alloc_core(%struct.TYPE_4__*, i8*, i64, i64, i32*, i32*, i32) #1

declare dso_local i32 @JEMALLOC_VALGRIND_MAKE_MEM_UNDEFINED(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
